# microc-lang

./: .gitignore  README.md  dune-project  microc-lang.install  microc-lang.opam  parsing_errors.txt  parsing_success.txt  run_parser_tests.sh
lib/: dune  parsing.ml
lib/adapters/: frontend_types_adapter.ml  frontend_types_adapter.mli  llvm_types_adapter.ml  llvm_types_adapter.mli
lib/backend/: codegen.ml  codegen.mli  llvm_utils.ml
lib/data/: ast.ml  errors.ml  semantic_errors.ml  symbol.ml  symbol.mli  types.ml  types.mli
lib/frontend/: deadcode_analyzer.ml  deadcode_analyzer.mli  declarations_analyzer.ml  declarations_analyzer.mli  dune  parser.mly  parsing.mli  return_analyzer.ml  return_analyzer.mli  scanner.mll  semantic_analysis.ml  semantic_analysis.mli  type_checker.ml  type_checker.mli
lib/storage/: symbol_builder.ml  symbol_builder.mli  symbol_table.mli  symbol_tables_repository.ml  symbol_tables_repository.mli
lib/symbol_table/: Symbol_builder.ml  Symbol_builder.mli  symbol_table.ml  symbol_table.mli  symbol_table_repository.ml  symbol_table_repository.mli
microc-parser/: parsing_errors.txt  parsing_success.txt
microc-parser/lib/: ast.ml  parser.mly  parsing.ml  parsing.mli  scanner.mll
microc-parser/test/: dune
microc-parser/test/samples/: fail-string1.mc  test-float1.mc  test-string2.mc
test/: semant_test.ml
test/samples/: fail-dead3.mc  fail-dead4.mc  fail-local2.mc  fail-no-return1.mc  fail-no-return2.mc  fail-no-return3.mc  fail-no-size-arr1.mc  fail-no-size-arr2.mc  fail-scope1.mc  fail-scope2.mc  fail-unused1.mc  fail-unused2.mc  fail-unused3.mc  fail-unused4.mc  fail-unused5.mc  test-ex2.mc  test-float1.mc  test-func2.mc  test-func6.mc  test-global5.mc  test-hex.mc  test-hex.out  test-local2.mc  test-ops1.mc  test-ops3.mc  test-ops3.out  test-print-str1.mc  test-ptr4.mc  test-return1.mc  test-scope1.mc  test-scope1.out  test-scope2.mc  test-scope2.out  test-scope3.mc  test-short-circuit.mc  test-short-circuit.out  test-string1.mc  test-string2.mc  test-unused1.mc  test-unused2.mc  (+1 more)
test/samples/c-versions/: test-ex11.c  test-ex13.c  (+4 more)
test/script/: codegen_test.ml  dune  exec_all_samples.sh  lexer_test.ml  parser_test.ml  semant_test.ml  test_all_correct.sh  test_all_failing.sh
test/unit/frontend/: deadcode_analyzer_test.ml  declarations_analyzer_test.ml  dune  return_analyzer_test.ml  type_checker_test.ml
test/unit/symbol_table/: dune  symbol_builder_test.ml  symbol_table_repository_test.ml  symbol_table_test.ml
(+19 files in other folders)
