(test
 (name type_checker_test)
 (modules type_checker_test)
 (libraries microc ounit2 test_utils))

(test
 (name deadcode_analyzer_test)
 (modules deadcode_analyzer_test)
 (libraries microc ounit2 test_utils))

(test
 (name return_analyzer_test)
 (modules return_analyzer_test)
 (libraries microc ounit2 test_utils))